--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,9 +1,11 @@
+include ./components/components.pug
+
 doctype html
 html(lang="ru")
-  include ./components/head.pug
+  include ./modules/head.pug
   body
     .wrapper
-      include ./components/header.pug
+      include ./modules/header.pug
       main.main
-      include ./components/footer.pug
+      include ./modules/footer.pug
     
