--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,6 +6,17 @@
 @import ./styles/global
 
 @import ./modules/header
+@import ./modules/sale
+@import ./modules/works
+@import ./modules/different
+@import ./modules/example
+@import ./modules/mistake
+@import ./modules/reasons
+@import ./modules/catalog
+@import ./modules/services
+@import ./modules/catalog-form
+@import ./modules/process
+@import ./modules/measure
 @import ./modules/footer
 
 @import ./styles/media
