--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,5 +1,4 @@
 include ./components/components.pug
-
 doctype html
 html(lang="ru")
   include ./modules/head.pug
@@ -7,5 +6,17 @@ html(lang="ru")
     .wrapper
       include ./modules/header.pug
       main.main
+        include ./modules/sale.pug
+        include ./modules/quiz.pug
+        include ./modules/works.pug
+        include ./modules/different.pug
+        include ./modules/example.pug
+        include ./modules/mistake.pug
+        include ./modules/reasons.pug
+        include ./modules/catalog.pug
+        include ./modules/services.pug
+        include ./modules/catalog-form.pug
+        include ./modules/process.pug
+        include ./modules/measure.pug
       include ./modules/footer.pug
     
