--- a/src/pug/modules/head.pug
+++ b/src/pug/modules/head.pug
@@ -1,4 +1,4 @@
 head
   meta(charset='UTF-8')
   meta(name='viewport', content='width=device-width, initial-scale=1.0')
-  title Заголовок страницы
+  title Септик — продажа под ключ | Септик сайт
