--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -18,5 +18,8 @@ html(lang="ru")
         include ./modules/catalog-form.pug
         include ./modules/process.pug
         include ./modules/measure.pug
+        include ./modules/technic.pug
+        include ./modules/montage-form.pug
+        include ./modules/install.pug
       include ./modules/footer.pug
     
