--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -17,6 +17,9 @@
 @import ./modules/catalog-form
 @import ./modules/process
 @import ./modules/measure
+@import ./modules/technic
+@import ./modules/montage-form
+@import ./modules/install
 @import ./modules/footer
 
 @import ./styles/media
